<resources>
    <string name="app_name">Just Java</string>
    <string name="Top">Toppings</string>
    <string name="QTY">QUANTITY</string>
    <string name="qtyValue">1</string>
    <string name="order">ORDER</string>
    <string name="orderSummary">Order Summary</string>
    <string name="_0"> </string>
    <string name="inc">+</string>
    <string name="dec">-</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="enter_your_name">Enter Your Name</string>
</resources>
